[gd_scene load_steps=5 format=2]

[ext_resource path="res://UserInterface/Theme2.tres" type="Theme" id=1]
[ext_resource path="res://proto/LifeCycle/SplashScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://UserInterface/font/Kanit-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 26
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = SubResource( 1 )

[node name="SplashScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.382813, 0.327484, 0.272156, 0.392157 )

[node name="TitleLabl" type="Label" parent="."]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.2
margin_bottom = 352.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "NUT COLLCTOR"
align = 1
autowrap = true
clip_text = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
margin_left = 383.0
margin_top = 245.0
margin_right = 640.0
margin_bottom = 354.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/vseparation = 16

[node name="GuideLabel" type="Label" parent="CenterContainer/GridContainer"]
margin_right = 257.0
margin_bottom = 59.0
theme = ExtResource( 1 )
text = "Winter is coming.
Go out and harvest some nuts!"
align = 1

[node name="PlayButton" type="Button" parent="CenterContainer/GridContainer"]
margin_top = 75.0
margin_right = 257.0
margin_bottom = 109.0
theme = ExtResource( 1 )
text = "PLAY"
